# inputtino

./: .dockerignore  CMakeLists.txt  README.md
.github/workflows/: python-lint-format-test-typecheck.yml  rust.yml
bindings/python/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
bindings/python/.devcontainer/: Dockerfile  devcontainer.json  docker-entrypoint.sh
bindings/python/src/inputtino/: base.py  joypad.py  keyboard.py
bindings/python/tests/: conftest.py  test_mouse.py
bindings/rust/: Cargo.toml  build.rs
bindings/rust/inputtino/: Cargo.toml
bindings/rust/inputtino-sys/: build.rs
bindings/rust/inputtino/examples/: keyboard.rs  mouse.rs
bindings/rust/inputtino/src/: common.rs  error.rs  joypad.rs  joypad_nintendo.rs  joypad_ps5.rs  joypad_xbox.rs  keyboard.rs  lib.rs  mouse.rs
bindings/rust/inputtino/tests/: common.rs  joypads.rs  keyboard.rs  mouse.rs
bindings/rust/src/: common.rs  joypad.rs  joypad_nintendo.rs  joypad_ps5.rs  joypad_switch.rs  joypad_xbox.rs  joypad_xone.rs  keyboard.rs  lib.rs  mouse.rs
bindings/rust/tests/: joypads.rs  keyboard.rs  mouse.rs
docker/: web-server.Dockerfile
include/inputtino/: input.h  input.hpp
src/c-bindings/: joypad_ps5.cpp
src/uhid/: joypad_ps5.cpp
src/uhid/include/: crc32.hpp
src/uhid/include/uhid/: protected_types.hpp  ps5.hpp
tests/: testCAPI.cpp  testJoypads.cpp
