[package]
name = "inputtino"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/games-on-whales/inputtino"
authors = ["ABeltramo"]
description = "Rust bindings for inputtino"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1"
pkg-config = "0.3.30"

[dev-dependencies]
input = "0.9.0"
rustix = { version = "0.38.18", features = ["fs"] }
approx = "0.5.1"
sdl2 = "0.37.0"
serial_test = "3.1.1"

[dependencies]
strum_macros = "0.26.4"
